--- a/src/app/+live-room/timeline/timeline.component.scss
+++ b/src/app/+live-room/timeline/timeline.component.scss
@@ -97,7 +97,7 @@
 
 .operation-area {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
   right: 12px;
   bottom: 17px;
   display: flex;
